Bug #40022
multisite: 'radosgw-admin bucket sync status' should call syncs_from(source.name) instead of id
Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:
0%
Source:
Tags:
multisite
Backport:
luminous mimic nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Description
If a zone is set up with sync_from_all=false, the bucket sync status command will incorrectly report "not in sync_from" because it's calling 'zone.syncs_from(source.id)', where syncs_from() expects a zone name instead of id
Related issues
History
#1 Updated by Casey Bodley almost 2 years ago
- Status changed from New to Fix Under Review
- Pull request ID set to 28243
#2 Updated by Casey Bodley almost 2 years ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #40141: mimic: multisite: 'radosgw-admin bucket sync status' should call syncs_from(source.name) instead of id added
#4 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #40142: nautilus: multisite: 'radosgw-admin bucket sync status' should call syncs_from(source.name) instead of id added
#5 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #40143: luminous: multisite: 'radosgw-admin bucket sync status' should call syncs_from(source.name) instead of id added
#6 Updated by Nathan Cutler over 1 year ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".